--- a/GameData/KerbolPlus/SarvinSystem/Sarvin/Sarvin.cfg
+++ b/GameData/KerbolPlus/SarvinSystem/Sarvin/Sarvin.cfg
@@ -3,65 +3,60 @@
     Body
     {
         name = Sarvin
-        flightGlobalsIndex = 705
+		cacheFile = KerbolPlus/Cache/Sarvin.bin
+		Template
+		{
+			name = Jool
+		}
 		Rings
 		{
 			Ring
 			{
-				angle = 2
+				angle = 0
 				outerRadius = 2310
 				innerRadius = 2200
 				texture = KerbolPlus/SarvinSystem/Sarvin/Textures/Sarvin_ring
-				color = 0.700, 0.500, 0.300, 1.000
-				lockRotation = true
-				unlit = true
-			}
-			Ring
-			{
-				angle = 2
-				outerRadius = 2510
-				innerRadius = 2310
-				texture = KerbolPlus/SarvinSystem/Sarvin/Textures/Sarvin_ring
-				color = 0.700, 0.500, 0.300, 1.000
+				colour = RGBA(0.100, 1.000, 1.000, 1.000)
 				lockRotation = true
 				unlit = true
 			}
 		}
+
 
         Orbit
         {
             referenceBody = Sun
             inclination = 2.3
             eccentricity = 0.09
-            semiMajorAxis = 155798522368
+			semiMajorAxis = 155798522368
             longitudeOfAscendingNode = 55
             argumentOfPeriapsis = 0
             meanAnomalyAtEpoch = 1.1
-            epoch = 1343.91
-            color = 0.67,0.88,0.97,1.0
+            epoch = 0
+            color = 0.682,0.878,0.968,1
         }
 
         Properties
         {
-            description = This beautiful blue gas giant was once thought to be have what looked like ears, that is until scientists learned to clean the lens of their telescopes.
+            description = This serene gas giant is often overlooked by astronomers, as it is so far out in the Kerbol system. It's calming blue hue hides the monstrous storms deep in it's atmosphere.
             radius = 5600000
             geeASL = 0.7
-            rotationPeriod = 39000
+			rotationPeriod = 39000
             rotates = true
             tidallyLocked = false
             initialRotation = 0
             isHomeWorld = false
-            timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
+            timewarpAltitudeLimits = 0 265000 285000 300000 320000 320000 600000 800000
 
             ScienceValues
             {
-                flyingLowDataValue = 14
-                flyingHighDataValue = 13
-                inSpaceLowDataValue = 12
-                inSpaceHighDataValue = 11
-                recoveryValue = 11
-                flyingAltitudeThreshold = 130000
-                spaceAltitudeThreshold = 5000000
+				flyingLowDataValue = 1
+				flyingHighDataValue = 1
+				inSpaceLowDataValue = 1
+				inSpaceHighDataValue = 1
+				recoveryValue = 1
+				flyingAltitudeThreshold = 150000
+				spaceAltitudeThreshold = 5000000
             }
         }
 
@@ -74,16 +69,16 @@
             Material
             {
                 texture = KerbolPlus/SarvinSystem/Sarvin/Textures/Sarvin_color
-                shininess = 0
-                specular = 0.0,0.0,0.0,0.0
+                shininess = 0.1
+                specular = 0.2,0.2,0.2,1.0
 
                 rimPower = 2.06 
-                rimBlend = 0.3
+                rimBlend = 0.5
 
                 Gradient
                 {
-                    0.0 = 0.72549,0.81961,0.83529,1
-                    0.6 = 0.0549,0.0784,0.141,1
+                    0.0 = 0.8,0.956,0.988,1
+                    0.6 = 1.0,0.87,0.792,1
                     1.0 = 0.0196,0.0196,0.0196,1
                 }
             }
@@ -91,71 +86,71 @@
 
         Atmosphere
         {
-            ambientColor = 0.67,0.88,0.97,1.0
+            ambientColor = 0.364, 0.533, 0.658, 1.00
 
-            lightColor = 0.76,0.56,0.47,1.0
+            lightColor = 0.636, 0.467, 0.342, 1.0
 
 			enabled = true
-			oxygen = false
+			oxygen = true
 			
-			altitude = 200000.0
-			atmosphereMolarMass = 0.0027999999
+			altitude = 220000.0
+			atmosphereMolarMass = 0.000179999990016222
 			pressureCurve
 			{
-				key = 0 1519.875 -6.392235E-02 -6.392235E-02
-				key = 10000 880.6515 -5.2023975E-02 -5.2023975E-02
-				key = 20000 479.3955 -3.18399E-02 -3.18399E-02
-				key = 30000 243.8535 -1.78341E-02 -1.78341E-02
-				key = 40000 122.7135 -9.099225E-03 -9.099225E-03
-				key = 50000 61.869 -4.5558E-03 -4.5558E-03
-				key = 60000 31.5975 -2.279775E-03 -2.279775E-03
-				key = 70000 16.2735 -1.1496E-03 -1.1496E-03
-				key = 80000 8.6055 -5.808E-04 -5.808E-04
-				key = 90000 4.6575 -2.994E-04 -2.994E-04
-				key = 100000 2.6175 -1.58475E-04 -1.58475E-04
-				key = 110000 1.488 -8.7075E-05 -8.7075E-05
-				key = 120000 0.876 -4.95E-05 -4.95E-05
-				key = 130000 0.498 -2.9925E-05 -2.9925E-05
-				key = 140000 0.2775 -1.7475E-05 -1.7475E-05
-				key = 150000 0.1485 -9.975E-06 -9.975E-06
-				key = 160000 0.078 -5.475E-06 -5.475E-06
-				key = 170000 0.039 -2.925E-06 -2.925E-06
-				key = 180000 0.0195 -1.65E-06 -1.65E-06
-				key = 190000 0.006 -9.75E-07 -9.75E-07
-				key = 200000 0 -6.E-07 -6.E-07
+				key = 0 1317.225 -3.52492518181818E-02 -3.52492518181818E-02
+				key = 11000 929.4831 -2.76840909090909E-02 -2.76840909090909E-02
+				key = 22000 708.1748267 -1.63277045454545E-02 -1.63277045454545E-02
+				key = 33000 570.2735133 -1.16681086363636E-02 -1.16681086363636E-02
+				key = 44000 451.47648 -9.93026745454546E-03 -9.93026745454546E-03
+				key = 55000 351.8076467 -8.25495863636364E-03 -8.25495863636364E-03
+				key = 66000 269.8673467 -6.73939736363636E-03 -6.73939736363636E-03
+				key = 77000 203.5409133 -5.416073E-03 -5.416073E-03
+				key = 88000 150.7137667 -4.28498081818182E-03 -4.28498081818182E-03
+				key = 99000 109.2713267 -3.34612909090909E-03 -3.34612909090909E-03
+				key = 110000 77.09892667 -2.59952018181818E-03 -2.59952018181818E-03
+				key = 121000 52.0819 -2.04514818181818E-03 -2.04514818181818E-03
+				key = 132000 32.10566667 -1.58460545454545E-03 -1.58460545454545E-03
+				key = 143000 17.22058 -9.57091554545455E-04 -9.57091554545455E-04
+				key = 154000 11.04965333 -3.88814163636364E-04 -3.88814163636364E-04
+				key = 165000 8.666666667 -2.17773636363636E-04 -2.17773636363636E-04
+				key = 176000 6.258633333 -2.15713372727273E-04 -2.15713372727273E-04
+				key = 187000 3.920973333 -1.97182463636364E-04 -1.97182463636364E-04
+				key = 198000 1.92062 -1.54377009090909E-04 -1.54377009090909E-04
+				key = 209000 0.52468 -8.73009090909091E-05 -8.73009090909091E-05
+				key = 220000 0 -4.76981818181818E-05 -4.76981818181818E-05
 			}
 			pressureCurveIsNormalized = false
 			
-			temperatureSeaLevel = 792.17
+			temperatureSeaLevel = 243.49
 			temperatureCurve
 			{
-				key = 0 792.17 -0.0032083335 -0.0032083335
-				key = 24000 584.0953283 -0.0004544294 -0.0004530286
-				key = 42000 584.0953283 0.0004530286 0.0004530286
-				key = 62000 732.7200938 0.0002476072 0.0002476072
-				key = 112000 732.7200938 -0.00034146415 -0.00034146415
-				key = 160000 505.7295429 -0.0004544294 -0.0004544294
-				key = 180000 505.7295429 0.00023688725 0.00023688725
-				key = 200000 621.9270868 0.00034730205 0.00034730205
-				key = 300000 0 -0.00022480455 -0.00022480455
+				key = 0 728.46 -0.002916666818 -0.002916666818
+				key = 26400 537.1196623 -0.0004131176364 -0.0004118441818
+				key = 46200 537.1196623 0.0004118441818 0.0004118441818
+				key = 68200 673.7913321 0.0002250974545 0.0002250974545
+				key = 123200 673.7913321 -0.0003104219545 -0.0003104219545
+				key = 176000 465.0564182 -0.0004131176364 -0.0004131176364
+				key = 198000 465.0564182 0.0002153520455 0.0002153520455
+				key = 220000 571.9088146 0.0003157291364 0.0003157291364
+				key = 275000 0 -0.0002043677727 -0.0002043677727
 			}
 			temperatureCurveIsNormalized = false
-			temperatureLapseRate = 0.0024
+			temperatureLapseRate = 0.001
 			temperatureSunMultCurve
 			{
 				key = 0 1 0 0
-				key = 15384.61539 0.5 -0.00003 -0.00005132245
-				key = 16952.35385 0 0 0
-				key = 30866.12307 0 0 0
-				key = 72845.07692 0.2 0 0
-				key = 110461.7846 0.2 0 0
-				key = 140445.5384 0 0 0
-				key = 200000 0.4 0 0
+				key = 16923.07692 0.5 -0.00002727272727 -0.00004665677273
+				key = 18647.58923 0 0 0
+				key = 33952.73537 0 0 0
+				key = 80129.58461 0.2 0 0
+				key = 121507.9631 0.2 0 0
+				key = 154490.0922 0 0 0
+				key = 220000 0.4 0 0
 			}
-			
-			albedo = 0.17
-			adiabaticIndex = 1.20000004768372
-			gasMassLapseRate = 2.06477390407027
+		
+			albedo = 0.52
+			adiabaticIndex = 1.42999994754791
+			gasMassLapseRate = 2.64291043733601
 		}
     }
 }
