Fixed and cleaned Keelon

--- a/GameData/KerbolPlus/KeelonSystem/Keelon/Keelon.cfg
+++ b/GameData/KerbolPlus/KeelonSystem/Keelon/Keelon.cfg
@@ -3,8 +3,13 @@
     Body
     {
 		name = Keelon
-		flightGlobalsIndex = 717
-
+		cacheFile = KerbolPlus/Cache/Keelon.bin
+		Template
+		{
+			name = Laythe
+			removeOcean = true
+			removeAllPQSMods = true
+		}
 		Orbit
 		{
             referenceBody = Sun
@@ -22,24 +27,8 @@
             description = The name of Keelon was given to this huge rocky planet outside Sarvin's orbit. It was named after the Kerbal God, Keelon, who was a brother of Kerbol and it was said that nothing escapes from it's supreme influence. Indeed, Keelon is a desert planet with an unforgettable G force and atmospheric pressure that will never let your ship leave.
             radius = 800000
             geeASL = 2.7
-			rotationPeriod = 52247
-			rotates = true
-			tidallyLocked = false
 			initialRotation = 0
-			isHomeWorld = false
-			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
-
-			biomeMap = KerbolPlus/KeelonSystem/Keelon/PluginData/Keelon_biome.png
-
-            Biomes
-            {
-                Biome
-                {
-                    name = Surface
-                    value = 1.0
-                    color = 1,1,1,1
-                }
-			}				
+			isHomeWorld = false	
 			ScienceValues
 			{
 				flyingLowDataValue = 16
@@ -55,19 +44,14 @@
 		ScaledVersion
 		{
 			type = Atmospheric
-			fadeStart = 0
-			fadeEnd = 0
-
 			Material
 			{
 				texture = KerbolPlus/KeelonSystem/Keelon/Textures/Keelon_color
 				normals = KerbolPlus/KeelonSystem/Keelon/Textures/Keelon_normal
 				shininess = 0
 				specular = 0,0,0,0
-
                 rimPower = 2.06 
                 rimBlend = 0.3
-
                 Gradient
                 {
                     0.0 = 0.6,0.41,0.17,1
@@ -76,16 +60,12 @@
                 }
             }
         }
-
         Atmosphere
         {
             ambientColor = 0.6, 0.41, 0.17, 1.00
-
             lightColor = 0.4, 0.59, 0.83, 1.0
-
 			enabled = true
-			oxygen = false
-			
+			oxygen = false			
 			altitude = 140000.0
 			atmosphereMolarMass = 0.0027999999
 			pressureCurve
@@ -112,8 +92,7 @@
 				key = 133000 0.0044 -1.02142857142857E-06 -1.02142857142857E-06
 				key = 140000 0 -6.28571428571429E-07 -6.28571428571429E-07
 			}
-			pressureCurveIsNormalized = false
-			
+			pressureCurveIsNormalized = false			
 			temperatureSeaLevel = 465.3
 			temperatureCurve
 			{
@@ -139,90 +118,34 @@
 				key = 77323.24923 0.2 0 0
 				key = 98311.87687 0 0 0
 				key = 140000 0.4 0 0
-			}
-			
+			}			
 			albedo = 0.45
 			adiabaticIndex = 1.20000004768372
 			gasMassLapseRate = 2.06477390407027
 		}
-
         PQS
         {
             maxQuadLengthsPerFrame = 0.03
             minLevel = 2
             maxLevel = 12
             minDetailDistance = 8
-
-            materialType = AtmosphericOptimized
-            Material
-            {
-                saturation = 1
-                contrast = 2
-                tintColor = 1.000,1.000,1.000,0.000
-
-                powerNear = 0.6
-                powerFar = 0.5
-
-                groundTexStart = 0
-                groundTexEnd = 1000
-
-                steepPower = 2
-                steepTexStart = 0
-                steepTexEnd = 50000
-                steepTex = BUILTIN/terrain_rock00
-                steepBumpMap = BUILTIN/RockyGround2
-                steepNearTiling = 8000
-                steepTiling = 500
-
-                lowTex = BUILTIN/SandyGround
-                lowBumpMap = BUILTIN/quiet
-                lowNearTiling = 2000
-                lowMultiFactor = 100
-                lowBumpNearTiling = 2000
-                lowBumpFarTiling = 4000
-
-                midTex = BUILTIN/terrain_sand00
-                midBumpMap = BUILTIN/SandyGround
-                midNearTiling = 4000
-                midMultiFactor = 100
-                midBumpNearTiling = 8000
-                midBumpFarTiling = 4000
-
-                highTex = BUILTIN/RockyGround
-                highBumpMap = BUILTIN/quiet
-                highNearTiling = 4000
-                highMultiFactor = 100
-                highBumpNearTiling = 4000
-                highBumpFarTiling = 4000
-
-                lowStart = 0
-                lowEnd = 0.3
-                highStart = 0.8
-                highEnd = 1
-
-                globalDensity = 0
-                fogColorRamp = BUILTIN/desert_atmogradient
-            }
-
 			Mods
 			{
 				VertexColorMap
 				{
-					map = KerbolPlus/KeelonSystem/Keelon/Textures/Keelon_color.png
+					map = KerbolPlus/KeelonSystem/Keelon/Textures/Keelon_color.dds
 					order = 500
 					enabled = true
 				}
-
 				VertexHeightMap
 				{
-					map = KerbolPlus/KeelonSystem/Keelon/PluginData/Keelon_height.png
+					map = KerbolPlus/KeelonSystem/Keelon/Textures/Keelon_height.dds
 					offset = -5000
 					deformity = 20500.0
 					scaleDeformityByRadius = false
 					order = 20
 					enabled = true
 				}
-
 				VertexSimplexHeight
 				{
 					seed = 98374
@@ -233,7 +156,6 @@
 					enabled = true
 					order = 59
 				}
-
 				VertexSimplexNoiseColor
 				{
 					seed = 45
@@ -246,7 +168,6 @@
 					enabled = false
 					order = 200
 				}
-
 				HeightColorMap
 				{
 					blend = 0.7
