--- a/GameData/KerbolPlus/DwarfPlanets/Kralaus/Kralaus.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Kralaus/Kralaus.cfg
@@ -3,8 +3,12 @@
     Body
     {
 		name = Kralaus
-		flightGlobalsIndex = 715
-
+		cacheFile = KerbolPlus/Cache/Kralaus.bin
+		Template
+		{
+			name = Gilly
+			removePQSMods = PQSLandControl, PQSMod_AltitudeAlpha,PQSMod_VertexSimplexHeightAbsolute, PQSMod_VertexHeightNoise
+		}
 		Orbit
 		{
             referenceBody = Sun
@@ -29,17 +33,6 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
 
-			biomeMap = DwarfPlanets/Kralaus/PluginData/Kralaus_biome.png
-
-            Biomes
-            {
-                Biome
-                {
-                    name = Surface
-                    value = 1.0
-                    color = 1,1,1,1
-                }
-			}				
 			ScienceValues
 			{
 				landedDataValue = 14
@@ -59,8 +52,8 @@
 			{
 				texture = KerbolPlus/DwarfPlanets/Kralaus/Textures/Kralaus_color
 				normals = KerbolPlus/DwarfPlanets/Kralaus/Textures/Kralaus_normal
-				shininess = 0
-				specular = 0,0,0,0
+				shininess = 0.2
+				specular = 0.05,0.05,0.05,0
 
 			}
 		}
@@ -68,145 +61,72 @@
         {
             maxQuadLengthsPerFrame = 0.03
             minLevel = 2
-            maxLevel = 12
+            maxLevel = 6
             minDetailDistance = 8
-
-            materialType = AtmosphericOptimized
-            Material
-            {
-                saturation = 1
-                contrast = 1.8
-                tintColor = 1.000,1.000,1.000,0.000
-
-                powerNear = 0.6
-                powerFar = 0.5
-
-                groundTexStart = 0
-                groundTexEnd = 1000
-
-                steepPower = 1.25
-                steepTexStart = 0
-                steepTexEnd = 50000
-                steepTex = BUILTIN/terrain_rock00
-                steepBumpMap = BUILTIN/RockyGround2
-                steepNearTiling = 100
-                steepTiling = 60
-
-                lowTex = BUILTIN/RockyGround
-                lowBumpMap = BUILTIN/quiet
-                lowNearTiling = 2000
-                lowMultiFactor = 100
-                lowBumpNearTiling = 2000
-                lowBumpFarTiling = 4000
-
-                midTex = BUILTIN/RockyGround
-                midBumpMap = BUILTIN/quiet
-                midNearTiling = 4000
-                midMultiFactor = 100
-                midBumpNearTiling = 4000
-                midBumpFarTiling = 4000
-
-                highTex = BUILTIN/RockyGround
-                highBumpMap = BUILTIN/RockyGround2
-                highNearTiling = 4000
-                highMultiFactor = 100
-                highBumpNearTiling = 8000
-                highBumpFarTiling = 4000
-
-                lowStart = 0
-                lowEnd = 0.3
-                highStart = 0.8
-                highEnd = 1
-
-                globalDensity = 0
-                fogColorRamp = BUILTIN/desert_atmogradient
-            }
 
             Mods
 			{
-				VertexColorMap
-				{
-					map = KerbolPlus/DwarfPlanets/Kralaus/Textures/Kralaus_color.png
-					order = 500
-					enabled = true
-				}
-
 				VertexHeightMap
 				{
-					map = KerbolPlus/DwarfPlanets/Kralaus/PluginData/Kralaus_height.png
+					map = KerbolPlus/DwarfPlanets/Kralaus/PluginData/Kralaus_height.dds
 					offset = 0
-					deformity = 15000.0
+					deformity = 14000.0
 					scaleDeformityByRadius = false
 					order = 20
 					enabled = true
 				}
 
-				VertexSimplexHeight
-				{
-					seed = 98374
-					deformity = 500.0
-					octaves = 8.0
-					persistence = 0.5
-					frequency = 4.0
-					enabled = true
-					order = 59
-				}
-
-				VertexSimplexNoiseColor
-				{
-					seed = 45
-					blend = 1.0
-					colorStart = 0.768656731,0.6996614,0.653089464,1
-					colorEnd = 0,0,0,1
-					octaves = 12.0
-					persistence = 0.5
-					frequency = 2.0
-					enabled = false
-					order = 200
-				}
-
-				HeightColorMap
-				{
-					blend = 0.7
-					order = 201
-					enabled = true
-					LandClasses
-					{
-						Class
-						{
-							name = AbyPl
-							altitudeStart = 0.0
-							altitudeEnd = 0.5
-							color = 0.0,0.0,0.0,1.0
-							lerpToNext = true
-						}
-						Class
-						{
-							name = Beach
-							altitudeStart = 0.5
-							altitudeEnd = 0.55
-							color = 0.164179087,0.164179087,0.164179087,1.0
-							lerpToNext = true
-						}
-						Class
-						{
-							name = Beach2
-							altitudeStart = 0.55
-							altitudeEnd = 1.0
-							color = 0.373134315,0.373134315,0.373134315,1.0
-							lerpToNext = false
-						}
-					}
-				}
 				VertexSimplexHeightAbsolute
 				{
 					seed = 4447895
-					deformity = 1000
+					deformity = 100
 					octaves = 8
 					persistence = 0.5
 					frequency = 24
 					enabled = true
 					order = 50
+				}
+
+				HeightColorMap
+				{
+					blend = 1
+					order = 99999999
+					enabled = true
+					LandClasses
+					{
+						Class
+						{
+							name = Flats
+							altitudeStart = 0.0
+							altitudeEnd = 0.12
+							color = 0.215,0.145,0.125,1.0
+							lerpToNext = true
+						}
+						Class
+						{
+							name = DirtFlats
+							altitudeStart = 0.12
+							altitudeEnd = 0.3
+							color = 0.25,0.156,0.125,1.0
+							lerpToNext = true
+						}
+						Class
+						{
+							name = LowLand
+							altitudeStart = 0.3
+							altitudeEnd = 0.7
+							color = 0.391,0.141,0.141,1.0
+							lerpToNext = true
+						}
+						Class
+						{
+							name = HighLand
+							altitudeStart = 0.7
+							altitudeEnd = 100
+							color = 0.709,0.231,0.231,1.0
+							lerpToNext = false
+						}
+					}
 				}
 			}
 		}
