--- a/GameData/KerbolPlus/DwarfPlanets/Harvest/Harvest.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Harvest/Harvest.cfg
@@ -3,8 +3,12 @@
     Body
     {
 		name = Harvest
-		flightGlobalsIndex = 701
-
+		cacheFile = KerbolPlus/Cache/Harvest.bin
+		Template
+		{
+			name = Gilly
+			removePQSMods = PQSLandControl, PQSMod_AltitudeAlpha,PQSMod_VertexSimplexHeightAbsolute, PQSMod_VertexHeightNoise
+		}
 		Orbit
 		{
             referenceBody = Sun
@@ -29,17 +33,6 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
 
-			biomeMap = KerbolPlus/DwarfPlanets/Harvest/PluginData/Harvest_biome.png
-
-            Biomes
-            {
-                Biome
-                {
-                    name = Surface
-                    value = 1.0
-                    color = 1,1,1,1
-                }
-			}				
 			ScienceValues
 			{
 				landedDataValue = 7
@@ -59,8 +52,8 @@
 			{
 				texture = KerbolPlus/DwarfPlanets/Harvest/Textures/Harvest_color
 				normals = KerbolPlus/DwarfPlanets/Harvest/Textures/Harvest_normal
-				shininess = 0
-				specular = 0,0,0,0
+				shininess = 3
+				specular = 0.05,0.05,0.05,0
 
 			}
 		}
@@ -68,72 +61,14 @@
         {
             maxQuadLengthsPerFrame = 0.03
             minLevel = 2
-            maxLevel = 12
+            maxLevel = 6
             minDetailDistance = 8
-
-            materialType = AtmosphericOptimized
-            Material
-            {
-                saturation = 1
-                contrast = 1.8
-                tintColor = 1.000,1.000,1.000,0.000
-
-                powerNear = 0.6
-                powerFar = 0.5
-
-                groundTexStart = 0
-                groundTexEnd = 1000
-
-                steepPower = 1.25
-                steepTexStart = 0
-                steepTexEnd = 50000
-                steepTex = BUILTIN/terrain_rock00
-                steepBumpMap = BUILTIN/RockyGround2
-                steepNearTiling = 100
-                steepTiling = 60
-
-                lowTex = BUILTIN/RockyGround
-                lowBumpMap = BUILTIN/quiet
-                lowNearTiling = 2000
-                lowMultiFactor = 100
-                lowBumpNearTiling = 2000
-                lowBumpFarTiling = 4000
-
-                midTex = BUILTIN/RockyGround
-                midBumpMap = BUILTIN/quiet
-                midNearTiling = 4000
-                midMultiFactor = 100
-                midBumpNearTiling = 4000
-                midBumpFarTiling = 4000
-
-                highTex = BUILTIN/RockyGround
-                highBumpMap = BUILTIN/RockyGround2
-                highNearTiling = 4000
-                highMultiFactor = 100
-                highBumpNearTiling = 8000
-                highBumpFarTiling = 4000
-
-                lowStart = 0
-                lowEnd = 0.3
-                highStart = 0.8
-                highEnd = 1
-
-                globalDensity = 0
-                fogColorRamp = BUILTIN/desert_atmogradient
-            }
 
             Mods
 			{
-				VertexColorMap
-				{
-					map = KerbolPlus/DwarfPlanets/Harvest/Textures/Harvest_color.png
-					order = 500
-					enabled = true
-				}
-
 				VertexHeightMap
 				{
-					map = KerbolPlus/DwarfPlanets/Harvest/PluginData/Harvest_height.png
+					map = KerbolPlus/DwarfPlanets/Harvest/PluginData/Harvest_height.dds
 					offset = -1000
 					deformity = 9500.0
 					scaleDeformityByRadius = false
@@ -143,7 +78,7 @@
 
 				VertexSimplexHeight
 				{
-					seed = 98374
+					seed = 11421
 					deformity = 500.0
 					octaves = 8.0
 					persistence = 0.5
@@ -152,89 +87,73 @@
 					order = 59
 				}
 
-				VertexSimplexNoiseColor
-				{
-					seed = 45
-					blend = 1.0
-					colorStart = 0.768656731,0.6996614,0.653089464,1
-					colorEnd = 0,0,0,1
-					octaves = 12.0
-					persistence = 0.5
-					frequency = 2.0
-					enabled = false
-					order = 200
-				}
-
 				HeightColorMap
 				{
-					blend = 0.7
-					order = 201
+					blend = 1
+					order = 99999999
 					enabled = true
 					LandClasses
 					{
 						Class
 						{
-							name = AbyPl
+							name = LowDark
 							altitudeStart = 0.0
-							altitudeEnd = 0.5
+							altitudeEnd = 0.275
 							color = 0.0,0.0,0.0,1.0
 							lerpToNext = true
 						}
 						Class
 						{
-							name = Beach
-							altitudeStart = 0.5
-							altitudeEnd = 0.55
-							color = 0.164179087,0.164179087,0.164179087,1.0
+							name = LowColor
+							altitudeStart = 0.275
+							altitudeEnd = 0.45
+							color = 0.243,0.215,0.149,1.0
 							lerpToNext = true
 						}
 						Class
 						{
-							name = Beach2
+							name = Mid
+							altitudeStart = 0.4
+							altitudeEnd = 0.5
+							color = 0.545,0.38,0.18,1.0
+							lerpToNext = true
+						}
+						Class
+						{
+							name = HighLight
+							altitudeStart = 0.5
+							altitudeEnd = 0.55
+							color = 0.568,0.443,0.231,1.0
+							lerpToNext = true
+						}
+						Class
+						{
+							name = HighSplash
 							altitudeStart = 0.55
-							altitudeEnd = 1.0
-							color = 0.373134315,0.373134315,0.373134315,1.0
+							altitudeEnd = 0.75
+							color = 0.623,0.431,0.219,1.0
+							lerpToNext = true
+						}
+						Class
+						{
+							name = Caps
+							altitudeStart = 0.75
+							altitudeEnd = 100
+							color = 0.76,0.694,0.58,1.0
 							lerpToNext = false
 						}
 					}
 				}
-				AltitudeAlpha
-				{
-					atmosphereDepth = 41000
-					invert = false
-					enabled = true
-					order = 999999999
-				}
+
 				VertexSimplexHeightAbsolute
 				{
-					seed = 4447895
+					seed = 666143
 					deformity = 1000
 					octaves = 8
 					persistence = 0.5
 					frequency = 24
 					enabled = true
 					order = 50
-				}
-				VertexHeightNoiseVertHeightCurve2
-				{
-					deformity = 500
-					ridgedAddSeed = 1530393216
-					ridgedAddFrequency = 12
-					ridgedAddLacunarity = 2
-					ridgedAddOctaves = 4
-					ridgedSubSeed = 1212096256
-					ridgedSubFrequency = 12
-					ridgedSubLacunarity = 2
-					ridgedSubOctaves = 4
-					ridgedMode = Low
-					simplexHeightStart = 0
-					simplexHeightEnd = 9000
-					simplexSeed = 1909396224
-					simplexOctaves = 6
-					simplexPersistence = 0.699999988079071
-					simplexFrequency = 4
-					enabled = true
-					order = 100
 				}
 			}
 		}
