--- a/GameData/KerbolPlus/DwarfPlanets/Pergas/Pergas.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Pergas/Pergas.cfg
@@ -3,8 +3,13 @@
     Body
     {
 		name = Pergas
-		flightGlobalsIndex = 704
-
+		cacheFile = KerbolPlus/Cache/Pergas.bin
+		Template
+		{
+			name = Laythe
+			removeOcean = true
+			removeAllPQSMods = true
+		}
 		Orbit
 		{
             referenceBody = Sun
@@ -29,17 +34,6 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
 
-			biomeMap = DwarfPlanets/Pergas/PluginData/Pergas_biome.png
-
-            Biomes
-            {
-                Biome
-                {
-                    name = Surface
-                    value = 1.0
-                    color = 1,1,1,1
-                }
-			}				
 			ScienceValues
 			{
 				flyingLowDataValue = 9
@@ -62,8 +56,8 @@
 			{
 				texture = KerbolPlus/DwarfPlanets/Pergas/Textures/Pergas_color
 				normals = KerbolPlus/DwarfPlanets/Pergas/Textures/Pergas_normal
-				shininess = 0
-				specular = 0,0,0,0
+				shininess = 0.3
+				specular = 0.1,0.1,0.1,0
 
 				rimPower = 2.06
 				rimBlend = 0.3
@@ -86,122 +80,70 @@
 			enabled = true
 			oxygen = false
 			
-			altitude = 110000.0
+			altitude = 9000.0
 			atmosphereMolarMass = 0.014
 			pressureCurve
 			{
-				key = 0 50.6625 -3.87408181818182E-03 -3.87408181818182E-03
-				key = 5500 29.35505 -3.15296818181818E-03 -3.15296818181818E-03
-				key = 11000 15.97985 -1.92969090909091E-03 -1.92969090909091E-03
-				key = 16500 8.12845 -1.08085454545455E-03 -1.08085454545455E-03
-				key = 22000 4.09045 -5.51468181818182E-04 -5.51468181818182E-04
-				key = 27500 2.0623 -2.76109090909091E-04 -2.76109090909091E-04
-				key = 33000 1.05325 -1.38168181818182E-04 -1.38168181818182E-04
-				key = 38500 0.54245 -6.96727272727273E-05 -6.96727272727273E-05
-				key = 44000 0.28685 -3.52E-05 -3.52E-05
-				key = 49500 0.15525 -1.81454545454545E-05 -1.81454545454545E-05
-				key = 55000 0.08725 -9.60454545454546E-06 -9.60454545454546E-06
-				key = 60500 0.0496 -5.27727272727273E-06 -5.27727272727273E-06
-				key = 66000 0.0292 -3.E-06 -3.E-06
-				key = 71500 0.0166 -1.81363636363636E-06 -1.81363636363636E-06
-				key = 77000 0.00925 -1.05909090909091E-06 -1.05909090909091E-06
-				key = 82500 0.00495 -6.04545454545455E-07 -6.04545454545455E-07
-				key = 88000 0.0026 -3.31818181818182E-07 -3.31818181818182E-07
-				key = 93500 0.0013 -1.77272727272727E-07 -1.77272727272727E-07
-				key = 99000 0.00065 -1.E-07 -1.E-07
-				key = 104500 0.0002 -5.90909090909091E-08 -5.90909090909091E-08
-				key = 110000 0 -3.63636363636364E-08 -3.63636363636364E-08
+				key = 0 50.6625 -2.78833277777778E-03 -2.78833277777778E-03
+				key = 4500 38.115 -2.53263888888889E-03 -2.53263888888889E-03
+				key = 9000 27.86875 -2.04555611111111E-03 -2.04555611111111E-03
+				key = 13500 19.705 -1.60955555555556E-03 -1.60955555555556E-03
+				key = 18000 13.38275 -1.21658333333333E-03 -1.21658333333333E-03
+				key = 22500 8.75575 -8.89805555555556E-04 -8.89805555555556E-04
+				key = 27000 5.3745 -6.30388888888889E-04 -6.30388888888889E-04
+				key = 31500 3.08225 -3.96361111111111E-04 -3.96361111111111E-04
+				key = 36000 1.80725 -2.15583333333333E-04 -2.15583333333333E-04
+				key = 40500 1.142 -1.235E-04 -1.235E-04
+				key = 45000 0.69575 -8.01111111111111E-05 -8.01111111111111E-05
+				key = 49500 0.421 -4.73333333333333E-05 -4.73333333333333E-05
+				key = 54000 0.26975 -2.51111111111111E-05 -2.51111111111111E-05
+				key = 58500 0.195 -1.35E-05 -1.35E-05
+				key = 63000 0.14825 -1.01388888888889E-05 -1.01388888888889E-05
+				key = 67500 0.10375 -9.02777777777778E-06 -9.02777777777778E-06
+				key = 72000 0.067 -7.30555555555556E-06 -7.30555555555556E-06
+				key = 76500 0.038 -5.55555555555556E-06 -5.55555555555556E-06
+				key = 81000 0.017 -3.75E-06 -3.75E-06
+				key = 85500 0.00425 -1.88888888888889E-06 -1.88888888888889E-06
+				key = 90000 0 -9.44444444444445E-07 -9.44444444444445E-07
 			}
 			pressureCurveIsNormalized = false
-			
 			temperatureSeaLevel = 279.15
 			temperatureCurve
 			{
-				key = 0 279.15 -0.005833333636 -0.005833333636
-				key = 13200 205.8272983 -0.0008262352727 -0.0008236883636
-				key = 23100 205.8272983 0.0008236883636 0.0008236883636
-				key = 34100 258.2006567 0.0004501949091 0.0004501949091
-				key = 61600 258.2006567 -0.0006208439091 -0.0006208439091
-				key = 88000 178.2122548 -0.0008262352727 -0.0008262352727
-				key = 99000 178.2122548 0.0004307040909 0.0004307040909
-				key = 110000 219.1586986 0.0006314582727 0.0006314582727
-				key = 165000 0 -0.0004087355455 -0.0004087355455
+				key = 0 279.15 -0.00712963 -0.00712963
+				key = 10800 205.8272983 -0.001009843111 -0.001006730222
+				key = 18900 205.8272983 0.001006730222 0.001006730222
+				key = 27900 258.2006567 0.0005502382222 0.0005502382222
+				key = 50400 258.2006567 -0.0007588092222 -0.0007588092222
+				key = 72000 178.2122548 -0.001009843111 -0.001009843111
+				key = 81000 178.2122548 0.0005264161111 0.0005264161111
+				key = 90000 219.1586986 0.0007717823333 0.0007717823333
+				key = 135000 0 -0.0004995656667 -0.0004995656667
 			}
 			temperatureCurveIsNormalized = false
-			temperatureLapseRate = 0.0024
 			temperatureSunMultCurve
 			{
 				key = 0 1 0 0
-				key = 8461.538462 0.5 -0.00005454545455 -0.00009331354545
-				key = 9323.794616 0 0 0
-				key = 16976.36769 0 0 0
-				key = 40064.7923 0.2 0 0
-				key = 60753.98154 0.2 0 0
-				key = 77245.04611 0 0 0
-				key = 110000 0.4 0 0
+				key = 6923.076924 0.5 -0.00006666666667 -0.0001140498889
+				key = 7628.559231 0 0 0
+				key = 13889.75538 0 0 0
+				key = 32780.28461 0.2 0 0
+				key = 49707.80308 0.2 0 0
+				key = 63200.49227 0 0 0
+				key = 90000 0.4 0 0
 			}
-			
-			albedo = 0.17
-			adiabaticIndex = 1.20000004768372
-			gasMassLapseRate = 2.06477390407027
 		}
 
         PQS
         {
             maxQuadLengthsPerFrame = 0.03
             minLevel = 2
-            maxLevel = 12
+            maxLevel = 6
             minDetailDistance = 8
 
-            materialType = AtmosphericOptimized
             Material
             {
-                saturation = 1
-                contrast = 1.8
-                tintColor = 1.000,1.000,1.000,0.000
-
-                powerNear = 0.6
-                powerFar = 0.5
-
-                groundTexStart = 0
-                groundTexEnd = 1000
-
-                steepPower = 1.25
-                steepTexStart = 0
-                steepTexEnd = 50000
-                steepTex = BUILTIN/terrain_rock00
-                steepBumpMap = BUILTIN/RockyGround2
-                steepNearTiling = 100
-                steepTiling = 60
-
-                lowTex = BUILTIN/RockyGround
-                lowBumpMap = BUILTIN/quiet
-                lowNearTiling = 2000
-                lowMultiFactor = 100
-                lowBumpNearTiling = 2000
-                lowBumpFarTiling = 4000
-
-                midTex = BUILTIN/RockyGround
-                midBumpMap = BUILTIN/quiet
-                midNearTiling = 4000
-                midMultiFactor = 100
-                midBumpNearTiling = 4000
-                midBumpFarTiling = 4000
-
-                highTex = BUILTIN/RockyGround
-                highBumpMap = BUILTIN/RockyGround2
-                highNearTiling = 4000
-                highMultiFactor = 100
-                highBumpNearTiling = 8000
-                highBumpFarTiling = 4000
-
-                lowStart = 0
-                lowEnd = 0.3
-                highStart = 0.8
-                highEnd = 1
-
                 globalDensity = 0
-                fogColorRamp = BUILTIN/desert_atmogradient
             }
 
             Mods
@@ -216,8 +158,8 @@
 				VertexHeightMap
 				{
 					map = KerbolPlus/DwarfPlanets/Pergas/PluginData/Pergas_height.png
-					offset = 2000
-					deformity = 6000.0
+					offset = 500
+					deformity = 8000.0
 					scaleDeformityByRadius = false
 					order = 20
 					enabled = true
@@ -225,7 +167,7 @@
 
 				VertexSimplexHeight
 				{
-					seed = 98374
+					seed = 456456
 					deformity = 500.0
 					octaves = 8.0
 					persistence = 0.5
@@ -234,89 +176,15 @@
 					order = 59
 				}
 
-				VertexSimplexNoiseColor
-				{
-					seed = 45
-					blend = 1.0
-					colorStart = 0.768656731,0.6996614,0.653089464,1
-					colorEnd = 0,0,0,1
-					octaves = 12.0
-					persistence = 0.5
-					frequency = 2.0
-					enabled = false
-					order = 200
-				}
-
-				HeightColorMap
-				{
-					blend = 0.7
-					order = 201
-					enabled = true
-					LandClasses
-					{
-						Class
-						{
-							name = AbyPl
-							altitudeStart = 0.0
-							altitudeEnd = 0.5
-							color = 0.0,0.0,0.0,1.0
-							lerpToNext = true
-						}
-						Class
-						{
-							name = Beach
-							altitudeStart = 0.5
-							altitudeEnd = 0.55
-							color = 0.164179087,0.164179087,0.164179087,1.0
-							lerpToNext = true
-						}
-						Class
-						{
-							name = Beach2
-							altitudeStart = 0.55
-							altitudeEnd = 1.0
-							color = 0.373134315,0.373134315,0.373134315,1.0
-							lerpToNext = false
-						}
-					}
-				}
-				AltitudeAlpha
-				{
-					atmosphereDepth = 41000
-					invert = false
-					enabled = true
-					order = 999999999
-				}
 				VertexSimplexHeightAbsolute
 				{
-					seed = 4447895
+					seed = 32168
 					deformity = 1000
 					octaves = 8
 					persistence = 0.5
 					frequency = 24
 					enabled = true
 					order = 50
-				}
-				VertexHeightNoiseVertHeightCurve2
-				{
-					deformity = 500
-					ridgedAddSeed = 1530393216
-					ridgedAddFrequency = 12
-					ridgedAddLacunarity = 2
-					ridgedAddOctaves = 4
-					ridgedSubSeed = 1212096256
-					ridgedSubFrequency = 12
-					ridgedSubLacunarity = 2
-					ridgedSubOctaves = 4
-					ridgedMode = Low
-					simplexHeightStart = 0
-					simplexHeightEnd = 9000
-					simplexSeed = 1909396224
-					simplexOctaves = 6
-					simplexPersistence = 0.699999988079071
-					simplexFrequency = 4
-					enabled = true
-					order = 100
 				}
 			}
 		}
