Faz, Pergas & Valit Cleanup

--- a/GameData/KerbolPlus/DwarfPlanets/Pergas/Pergas.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Pergas/Pergas.cfg
@@ -150,14 +150,14 @@
 			{
 				VertexColorMap
 				{
-					map = KerbolPlus/DwarfPlanets/Pergas/Textures/Pergas_color.png
+					map = KerbolPlus/DwarfPlanets/Pergas/Textures/Pergas_color.dds
 					order = 500
 					enabled = true
 				}
 
 				VertexHeightMap
 				{
-					map = KerbolPlus/DwarfPlanets/Pergas/PluginData/Pergas_height.png
+					map = KerbolPlus/DwarfPlanets/Pergas/PluginData/Pergas_height.dds
 					offset = 500
 					deformity = 8000.0
 					scaleDeformityByRadius = false
