--- a/GameData/KerbolPlus/DwarfPlanets/Corolet/Corolet.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Corolet/Corolet.cfg
@@ -3,8 +3,11 @@
     Body
     {
 		name = Corolet
-		flightGlobalsIndex = 720
-
+		cacheFile = KerbolPlus/Cache/Corolet.bin
+		Template
+		{
+			name = Minmus
+		}
 		Orbit
 		{
             referenceBody = Sun
@@ -23,23 +26,7 @@
             radius = 6000
             geeASL = 0.24
 			rotationPeriod = 46134.589375
-			rotates = true
-			tidallyLocked = false
-			initialRotation = 0
-			isHomeWorld = false
-			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
-
-			biomeMap = KerbolPlus/DwarfPlanets/Corolet/PluginData/Corolet_biome.png
-
-            Biomes
-            {
-                Biome
-                {
-                    name = Surface
-                    value = 1.0
-                    color = 1,1,1,1
-                }
-			}				
+			initialRotation = 0			
 			ScienceValues
 			{
 				landedDataValue = 20
@@ -52,9 +39,6 @@
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 0
-			fadeEnd = 0
-
 			Material
 			{
 				texture = KerbolPlus/DwarfPlanets/Corolet/Textures/Corolet_color
@@ -64,170 +48,180 @@
 
 			}
 		}
+		Particle
+		{
+			target = Sun
+			texture = KerbolPlus/DwarfPlanets/Corolet/Textures/trail
+			minEmission = 150
+			maxEmission = 150
+			lifespanMin = 1
+			lifespanMax = 2
+			sizeMin = 2
+			sizeMax = 2
+			speedScale = -2E-07
+			rate = -0.5
+			randVelocity = 0.0, 0.0, 0.0
+			Colors
+			{
+				color1 = 0.800, 0.900, 1.000, 0.200
+				color2 = 0.500, 0.700, 1.000, 0.200
+				color3 = 0.800, 0.900, 1.000, 0.200
+				color4 = 0.500, 0.700, 1.000, 0.300
+				color5 = 0.800, 0.900, 1.000, 0.200
+			}
+		}
         PQS
         {
             maxQuadLengthsPerFrame = 0.03
             minLevel = 2
             maxLevel = 12
             minDetailDistance = 8
-
-            materialType = AtmosphericOptimized
-            Material
-            {
-                saturation = 1
-                contrast = 1.8
-                tintColor = 1.000,1.000,1.000,0.000
-
-                powerNear = 0.6
-                powerFar = 0.5
-
-                groundTexStart = 0
-                groundTexEnd = 1000
-
-                steepPower = 1.25
-                steepTexStart = 0
-                steepTexEnd = 50000
-                steepTex = BUILTIN/terrain_rock00
-                steepBumpMap = BUILTIN/RockyGround2
-                steepNearTiling = 100
-                steepTiling = 60
-
-                lowTex = BUILTIN/RockyGround
-                lowBumpMap = BUILTIN/quiet
-                lowNearTiling = 2000
-                lowMultiFactor = 100
-                lowBumpNearTiling = 2000
-                lowBumpFarTiling = 4000
-
-                midTex = BUILTIN/RockyGround
-                midBumpMap = BUILTIN/quiet
-                midNearTiling = 4000
-                midMultiFactor = 100
-                midBumpNearTiling = 4000
-                midBumpFarTiling = 4000
-
-                highTex = BUILTIN/RockyGround
-                highBumpMap = BUILTIN/RockyGround2
-                highNearTiling = 4000
-                highMultiFactor = 100
-                highBumpNearTiling = 8000
-                highBumpFarTiling = 4000
-
-                lowStart = 0
-                lowEnd = 0.3
-                highStart = 0.8
-                highEnd = 1
-
-                globalDensity = 0
-                fogColorRamp = BUILTIN/desert_atmogradient
-            }
-
-            Mods
+			Mods
 			{
-				VertexColorMap
+				FlattenOcean
 				{
-					map = KerbolPlus/DwarfPlanets/Corolet/Textures/Corolet_color.png
-					order = 500
+					oceanRadius = 900
 					enabled = true
+					order = 101
 				}
-
-				VertexHeightMap
+				FlattenMountains
 				{
-					map = KerbolPlus/DwarfPlanets/Corolet/PluginData/Corolet_height.png
-					offset = 0
-					deformity = 800.0
-					scaleDeformityByRadius = false
-					order = 20
+					altitude = 1800
 					enabled = true
+					order = 102
 				}
-
-				VertexSimplexHeight
+				VertexPlanet
 				{
-					seed = 98374
-					deformity = 500.0
-					octaves = 8.0
-					persistence = 0.5
-					frequency = 4.0
-					enabled = true
-					order = 59
-				}
-
-				VertexSimplexNoiseColor
-				{
-					seed = 45
-					blend = 1.0
-					colorStart = 0.768656731,0.6996614,0.653089464,1
-					colorEnd = 0,0,0,1
-					octaves = 12.0
-					persistence = 0.5
-					frequency = 2.0
-					enabled = false
-					order = 200
-				}
-
-				HeightColorMap
-				{
-					blend = 0.7
-					order = 201
-					enabled = true
+					buildHeightColors = false
+					colorDeformity = 6000
+					ContinentalSimplex
+					{
+						deformity = 1.5
+						frequency = 2
+						octaves = 10
+						persistance = 0.400000005960464
+						seed = 33124
+					}
+					RuggednessSimplex
+					{
+						deformity = 2
+						frequency = 0.5
+						octaves = 7
+						persistance = 0.5
+						seed = 33125
+					}
+					SharpnessNoise
+					{
+						seed = 0
+						deformity = 0.00100000004749745
+						octaves = 4
+						persistance = 2
+						frequency = 7
+						Noise
+						{
+							frequency = 0.5
+							lacunarity = 0.5
+							quality = High
+							octaveCount = 4
+							seed = 33127
+						}
+					}
+					SharpnessSimplexMap
+					{
+						deformity = 40
+						frequency = 3
+						octaves = 6
+						persistance = 0.550000011920929
+						seed = 33128
+					}
+					deformity = 2200
 					LandClasses
 					{
-						Class
-						{
-							name = AbyPl
-							altitudeStart = 0.0
-							altitudeEnd = 0.5
-							color = 0.0,0.0,0.0,1.0
-							lerpToNext = true
-						}
-						Class
+						LandClass
 						{
 							name = Beach
-							altitudeStart = 0.5
-							altitudeEnd = 0.55
-							color = 0.164179087,0.164179087,0.164179087,1.0
+							baseColor = 0, 0.4060674, 1, 1.000
+							colorNoise = 0.2303371, 0, 0.7808989, 1.000
+							colorNoiseAmount = 0.600000002980232
+							SimplexNoiseMap
+							{
+								deformity = 1
+								frequency = 4
+								octaves = 4
+								persistance = 0.600000023841858
+								seed = 33134
+							}
+							fractalStart = 0.00100000004749745
+							fractalEnd = 0.179999988079071
+							fractalDelta = 0.448999988031574
+							startHeight = 0
+							endHeight = 0
 							lerpToNext = true
 						}
-						Class
+						LandClass
 						{
-							name = Beach2
-							altitudeStart = 0.55
-							altitudeEnd = 1.0
-							color = 0.373134315,0.373134315,0.373134315,1.0
+							name = Slopes
+							baseColor = 0.1586742, 0.2359551, 0.1181798, 1.000
+							colorNoise = 0.1238202, 0.12, 0.1462697, 1.000
+							colorNoiseAmount = 0.300000011920929
+							SimplexNoiseMap
+							{
+								deformity = 1
+								frequency = 3
+								octaves = 4
+								persistance = 0.600000023841858
+								seed = 33135
+							}
+							fractalStart = 0.179999988079071
+							fractalEnd = 0.399999976158142
+							fractalDelta = 0.449999988079071
+							startHeight = 0
+							endHeight = 0
+							lerpToNext = true
+						}
+						LandClass
+						{
+							name = Hills
+							baseColor = 0, 0.4, 0.3089888, 1.000
+							colorNoise = 0.23, 0, 0.527191, 1.000
+							colorNoiseAmount = 0.6
+							SimplexNoiseMap
+							{
+								deformity = 1
+								frequency = 2
+								octaves = 4
+								persistance = 0.600000023841858
+								seed = 33136
+							}
+							fractalStart = 0.399999976158142
+							fractalEnd = 2
+							fractalDelta = 1.10000002384186
+							startHeight = 0
+							endHeight = 0
 							lerpToNext = false
 						}
 					}
-				}
-				VertexSimplexHeightAbsolute
-				{
-					seed = 4447895
-					deformity = 1000
-					octaves = 8
-					persistence = 0.5
-					frequency = 24
-					enabled = true
-					order = 50
-				}
-				VertexHeightNoiseVertHeightCurve2
-				{
-					deformity = 500
-					ridgedAddSeed = 1530393216
-					ridgedAddFrequency = 12
-					ridgedAddLacunarity = 2
-					ridgedAddOctaves = 4
-					ridgedSubSeed = 1212096256
-					ridgedSubFrequency = 12
-					ridgedSubLacunarity = 2
-					ridgedSubOctaves = 4
-					ridgedMode = Low
-					simplexHeightStart = 0
-					simplexHeightEnd = 9000
-					simplexSeed = 1909396224
-					simplexOctaves = 6
-					simplexPersistence = 0.699999988079071
-					simplexFrequency = 4
-					enabled = true
-					order = 100
+					oceanDepth = 0
+					oceanLevel = 0
+					oceanSnap = false
+					oceanStep = 0
+					seed = 75783
+					terrainRidgeBalance = 0.1
+					terrainRidgesMax = 1
+					terrainRidgesMin = 0.4
+					terrainShapeStart = 2
+					terrainShapeEnd = -2
+					terrainSmoothing = 0.100000001490116
+					TerrainTypeSimplex
+					{
+						deformity = 1
+						frequency = 4
+						octaves = 12
+						persistance = 0.7
+						seed = 33126
+					}
+					enabled = True
+					order = 100		
 				}
 			}
 		}
