Dwarf Planets DONE

--- a/GameData/KerbolPlus/DwarfPlanets/Pergas/Pergas.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Pergas/Pergas.cfg
@@ -56,7 +56,7 @@
 			{
 				texture = KerbolPlus/DwarfPlanets/Pergas/Textures/Pergas_color
 				normals = KerbolPlus/DwarfPlanets/Pergas/Textures/Pergas_normal
-				shininess = 0.3
+				shininess = 0.0
 				specular = 0.1,0.1,0.1,0
 
 				rimPower = 2.06
@@ -80,57 +80,57 @@
 			enabled = true
 			oxygen = false
 			
-			altitude = 9000.0
-			atmosphereMolarMass = 0.014
+			altitude = 55000.0
+			atmosphereMolarMass = 0.02896440029
 			pressureCurve
 			{
-				key = 0 50.6625 -2.78833277777778E-03 -2.78833277777778E-03
-				key = 4500 38.115 -2.53263888888889E-03 -2.53263888888889E-03
-				key = 9000 27.86875 -2.04555611111111E-03 -2.04555611111111E-03
-				key = 13500 19.705 -1.60955555555556E-03 -1.60955555555556E-03
-				key = 18000 13.38275 -1.21658333333333E-03 -1.21658333333333E-03
-				key = 22500 8.75575 -8.89805555555556E-04 -8.89805555555556E-04
-				key = 27000 5.3745 -6.30388888888889E-04 -6.30388888888889E-04
-				key = 31500 3.08225 -3.96361111111111E-04 -3.96361111111111E-04
-				key = 36000 1.80725 -2.15583333333333E-04 -2.15583333333333E-04
-				key = 40500 1.142 -1.235E-04 -1.235E-04
-				key = 45000 0.69575 -8.01111111111111E-05 -8.01111111111111E-05
-				key = 49500 0.421 -4.73333333333333E-05 -4.73333333333333E-05
-				key = 54000 0.26975 -2.51111111111111E-05 -2.51111111111111E-05
-				key = 58500 0.195 -1.35E-05 -1.35E-05
-				key = 63000 0.14825 -1.01388888888889E-05 -1.01388888888889E-05
-				key = 67500 0.10375 -9.02777777777778E-06 -9.02777777777778E-06
-				key = 72000 0.067 -7.30555555555556E-06 -7.30555555555556E-06
-				key = 76500 0.038 -5.55555555555556E-06 -5.55555555555556E-06
-				key = 81000 0.017 -3.75E-06 -3.75E-06
-				key = 85500 0.00425 -1.88888888888889E-06 -1.88888888888889E-06
-				key = 90000 0 -9.44444444444445E-07 -9.44444444444445E-07
+				key = 0 50.6625 -4.13418181818182E-03 -4.13418181818182E-03
+				key = 2750 39.2935 -3.985E-03 -3.985E-03
+				key = 5500 28.745 -3.36957545454545E-03 -3.36957545454545E-03
+				key = 8250 20.76083333 -2.53160636363636E-03 -2.53160636363636E-03
+				key = 11000 14.82116667 -1.83386363636364E-03 -1.83386363636364E-03
+				key = 13750 10.67458333 -1.27807554545455E-03 -1.27807545454545E-03
+				key = 16500 7.79175 -9.42818181818182E-04 -9.42818181818182E-04
+				key = 19250 5.489083333 -6.92106090909091E-04 -6.92106090909091E-04
+				key = 22000 3.985166667 -4.54621181818182E-04 -4.54621181818182E-04
+				key = 24750 2.988666667 -3.19833272727273E-04 -3.19833272727273E-04
+				key = 27500 2.226083333 -2.37363636363636E-04 -2.37363636363636E-04
+				key = 30250 1.683166667 -1.76439363636364E-04 -1.76439363636364E-04
+				key = 33000 1.255666667 -1.46060545454545E-04 -1.46060545454545E-04
+				key = 35750 0.8798333333 -1.13333363636364E-04 -1.13333363636364E-04
+				key = 38500 0.6323333333 -7.67272727272727E-05 -7.67272727272727E-05
+				key = 41250 0.4578333333 -5.98939363636364E-05 -5.98939363636364E-05
+				key = 44000 0.3029166667 0.E+00 0.E+00
+				key = 46750 0.1756666667 -4.04545454545455E-05 -4.04545454545455E-05
+				key = 49500 0.08041666667 -2.81818181818182E-05 -2.81818181818182E-05
+				key = 52250 0.02066666667 -1.46212090909091E-05 -1.46212090909091E-05
+				key = 55000 0 -7.51515181818182E-06 -7.51515181818182E-06
 			}
 			pressureCurveIsNormalized = false
 			temperatureSeaLevel = 279.15
 			temperatureCurve
 			{
-				key = 0 279.15 -0.00712963 -0.00712963
-				key = 10800 205.8272983 -0.001009843111 -0.001006730222
-				key = 18900 205.8272983 0.001006730222 0.001006730222
-				key = 27900 258.2006567 0.0005502382222 0.0005502382222
-				key = 50400 258.2006567 -0.0007588092222 -0.0007588092222
-				key = 72000 178.2122548 -0.001009843111 -0.001009843111
-				key = 81000 178.2122548 0.0005264161111 0.0005264161111
-				key = 90000 219.1586986 0.0007717823333 0.0007717823333
-				key = 135000 0 -0.0004995656667 -0.0004995656667
+				key = 0 279.15 -0.01166666727 -0.01166666727
+				key = 6600 205.8272983 -0.001652470545 -0.001647376727
+				key = 11550 205.8272983 0.001647376727 0.001647376727
+				key = 17050 258.2006567 0.0009003898182 0.0009003898182
+				key = 30800 258.2006567 -0.001241687818 -0.001241687818
+				key = 44000 178.2122548 -0.001652470545 -0.001652470545
+				key = 49500 178.2122548 0.0008614081818 0.0008614081818
+				key = 55000 219.1586986 0.001262916545 0.001262916545
+				key = 82500 0 -0.0008174710909 -0.0008174710909
 			}
 			temperatureCurveIsNormalized = false
 			temperatureSunMultCurve
 			{
 				key = 0 1 0 0
-				key = 6923.076924 0.5 -0.00006666666667 -0.0001140498889
-				key = 7628.559231 0 0 0
-				key = 13889.75538 0 0 0
-				key = 32780.28461 0.2 0 0
-				key = 49707.80308 0.2 0 0
-				key = 63200.49227 0 0 0
-				key = 90000 0.4 0 0
+				key = 4230.769231 0.5 -0.0001090909091 -0.0001866270909
+				key = 4661.897308 0 0 0
+				key = 8488.183844 0 0 0
+				key = 20032.39615 0.2 0 0
+				key = 30376.99077 0.2 0 0
+				key = 38622.52306 0 0 0
+				key = 55000 0.4 0 0
 			}
 		}
 
@@ -138,7 +138,7 @@
         {
             maxQuadLengthsPerFrame = 0.03
             minLevel = 2
-            maxLevel = 6
+            maxLevel = 8
             minDetailDistance = 8
 
             Material
@@ -148,13 +148,6 @@
 
             Mods
 			{
-				VertexColorMap
-				{
-					map = KerbolPlus/DwarfPlanets/Pergas/Textures/Pergas_color.dds
-					order = 500
-					enabled = true
-				}
-
 				VertexHeightMap
 				{
 					map = KerbolPlus/DwarfPlanets/Pergas/PluginData/Pergas_height.dds
@@ -186,6 +179,63 @@
 					enabled = true
 					order = 50
 				}
+                HeightColorMap
+                {
+                    blend = 1
+                    order = 9999999
+                    enabled = true
+                    LandClasses
+                    {
+                        Class
+                        {
+                            name = Base
+                            altitudeStart = 0.0
+                            altitudeEnd = 0.15
+                            color = 0.1,0.1,0.1,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = BaseGrad
+                            altitudeStart = 0.15
+                            altitudeEnd = 0.3
+                            color = 0.1,0.1,0.1,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = Low
+                            altitudeStart = 0.3
+                            altitudeEnd = 0.47
+                            color = 0.125,0.156,0.16,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = Mid
+                            altitudeStart = 0.47
+                            altitudeEnd = 0.5
+                            color = 0.227,0.294,0.305,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = High
+                            altitudeStart = 0.5
+                            altitudeEnd = 0.95
+                            color = 0.427,0.262,0.145,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = Peaks
+                            altitudeStart = 0.95
+                            altitudeEnd = 10.0	
+                            color = 0.752,0.415,0.149,1.0
+                            lerpToNext = false
+                        }
+                    }
+                }
 			}
 		}
 	}
