--- a/GameData/KerbolPlus/DwarfPlanets/Valit/Valit.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Valit/Valit.cfg
@@ -53,25 +53,18 @@
 				texture = KerbolPlus/DwarfPlanets/Valit/Textures/Valit_color
 				normals = KerbolPlus/DwarfPlanets/Valit/Textures/Valit_normal
 				shininess = 0
-				specular = 0,0,0,0
+				specular = 0.1,0.1,0.1,0
 			}
 		}
         PQS
         {
             maxQuadLengthsPerFrame = 0.03
             minLevel = 2
-            maxLevel = 6
+            maxLevel = 8
             minDetailDistance = 8
 
             Mods
 			{
-				VertexColorMap
-				{
-					map = KerbolPlus/DwarfPlanets/Valit/Textures/Valit_color.dds
-					order = 500
-					enabled = true
-				}
-
 				VertexHeightMap
 				{
 					map = KerbolPlus/DwarfPlanets/Valit/PluginData/Valit_height.dds
@@ -103,6 +96,63 @@
 					enabled = true
 					order = 50
 				}
+                HeightColorMap
+                {
+                    blend = 1
+                    order = 9999999
+                    enabled = true
+                    LandClasses
+                    {
+                        Class
+                        {
+                            name = Base
+                            altitudeStart = 0.0
+                            altitudeEnd = 0.25
+                            color = 0.1,0.1,0.1,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = BaseGrad
+                            altitudeStart = 0.25
+                            altitudeEnd = 0.4
+                            color = 0.1,0.1,0.1,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = Low
+                            altitudeStart = 0.4
+                            altitudeEnd = 0.5
+                            color = 0.337,0.172,0.101,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = Mid
+                            altitudeStart = 0.5
+                            altitudeEnd = 0.55
+                            color = 0.505,0.329,0.184,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = High
+                            altitudeStart = 0.55
+                            altitudeEnd = 0.7
+                            color = 0.592,0.333,0.188,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = Peaks
+                            altitudeStart = 0.7
+                            altitudeEnd = 10.0	
+                            color = 0.6,0.396,0.196,1.0
+                            lerpToNext = false
+                        }
+                    }
+                }
 			}
 		}
 	}
