--- a/GameData/KerbolPlus/SarvinSystem/Potatus/Potatus.cfg
+++ b/GameData/KerbolPlus/SarvinSystem/Potatus/Potatus.cfg
@@ -1,14 +1,15 @@
 @Kopernicus:AFTER[Kopernicus]
 {
-	Body
+    Body
     {
 		name = Potatus
-		cacheFile = KerbolPlus/Cache/Potatus.bin
 		Template
-		{
-			name = Minmus
-			removePQSMods = PQSMod_AltitudeAlpha, PQSLandControl
-		}
+        {
+            name = Laythe
+			removeAllPQSMods = true
+			removeOcean = true
+        }
+
 		Orbit
 		{
             referenceBody = Sarvin
@@ -19,162 +20,197 @@
             argumentOfPeriapsis = 0
             meanAnomalyAtEpoch = 1.1
             epoch = 1343.91
-            color = 0.35,0.35,0.35,1
+            color = 0.58,0.59,0.47,1.0
 		}
 		Properties
 		{
-            description = This poor planet was the last to be discovered from the Sarvin system. Almost torn to pieces by tidal forces, this oblate moon spins incontrollably against Sarvin's tidal forces.
-            radius = 110000
+            description = Due to its slightly oblate shape caused by tidal forces exerted by Sarvin, the scientists who first observed it exclaimed that they had found a space potato! Their observations about it's vegetable origins were quickly changed.
+            radius = 240000
             geeASL = 0.24
+			rotationPeriod = 52980.8790593796
+			rotates = true
 			tidallyLocked = true
-			initialRotation = 0
+			initialRotation = 317
 			isHomeWorld = false
-			timewarpAltitudeLimits = 0 5000 15000 50000 100000 300000 600000 800000
+			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
 
 			ScienceValues
 			{
-				landedDataValue = 1
-				inSpaceLowDataValue = 1
-				inSpaceHighDataValue = 1
-				recoveryValue = 1
-				spaceAltitudeThreshold = 50000
+				landedDataValue = 14
+				inSpaceLowDataValue = 12
+				inSpaceHighDataValue = 11
+				recoveryValue = 11
+				spaceAltitudeThreshold = 120000
 			}
 		}
 		ScaledVersion
 		{
+			type = Atmospheric
+			fadeStart = 0
+			fadeEnd = 0
+
 			Material
 			{
 				texture = KerbolPlus/SarvinSystem/Potatus/Textures/Potatus_color
 				normals = KerbolPlus/SarvinSystem/Potatus/Textures/Potatus_normal
-				shininess = 0.3
-				specular = 0.5,0.5,0.5,1
+				shininess = 0
+				specular = 0,0,0,0
+
+                rimPower = 2.06 
+                rimBlend = 0.3
+
+                Gradient
+                {
+                    0.0 = 0.1,0.2,3,1
+                    0.5 = 0.1,0.15,0.2,1
+                    1.0 = 0.0,0.0,0.0,1
+                }
+            }
+		}
+        Atmosphere
+        {
+            ambientColor = 0.18, 0.17, 0.39, 1.00
+
+            lightColor = 0.82, 0.83, 0.61, 1.0
+
+			enabled = true
+			oxygen = false
+			
+			altitude = 40000.0
+			atmosphereMolarMass = 0.014    
+			pressureCurve
+			{
+				key = 0 20.265 -2.5094995E-03 -2.5094995E-03
+				key = 2000 15.246 -2.279375E-03 -2.279375E-03
+				key = 4000 11.1475 -1.8410005E-03 -1.8410005E-03
+				key = 6000 7.882 -1.4486E-03 -1.4486E-03
+				key = 8000 5.3531 -1.094925E-03 -1.094925E-03
+				key = 10000 3.5023 -8.00825E-04 -8.00825E-04
+				key = 12000 2.1498 -5.6735E-04 -5.6735E-04
+				key = 14000 1.2329 -3.56725E-04 -3.56725E-04
+				key = 16000 0.7229 -1.94025E-04 -1.94025E-04
+				key = 18000 0.4568 -1.1115E-04 -1.1115E-04
+				key = 20000 0.2783 -7.21E-05 -7.21E-05
+				key = 22000 0.1684 -4.26E-05 -4.26E-05
+				key = 24000 0.1079 -2.26E-05 -2.26E-05
+				key = 26000 0.078 -1.215E-05 -1.215E-05
+				key = 28000 0.0593 -9.125E-06 -9.125E-06
+				key = 30000 0.0415 -8.125E-06 -8.125E-06
+				key = 32000 0.0268 -6.575E-06 -6.575E-06
+				key = 34000 0.0152 -5.E-06 -5.E-06
+				key = 36000 0.0068 -3.375E-06 -3.375E-06
+				key = 38000 0.0017 -1.7E-06 -1.7E-06
+				key = 40000 0 -8.5E-07 -8.5E-07
+			}
+			pressureCurveIsNormalized = false
+			temperatureSeaLevel = 112.4
+			temperatureCurve
+			{
+				key = 0 112.4 -0.0160416675 -0.0160416675
+				key = 4800 82.87654784 -0.002272147 -0.002265143
+				key = 8400 82.87654784 0.002265143 0.002265143
+				key = 12400 103.964728 0.001238036 0.001238036
+				key = 22400 103.964728 -0.00170732075 -0.00170732075
+				key = 32000 71.7573256 -0.002272147 -0.002272147
+				key = 36000 71.7573256 0.00118443625 0.00118443625
+				key = 40000 88.24444823 0.00173651025 0.00173651025
+				key = 60000 0 -0.00112402275 -0.00112402275
+			}
+			temperatureCurveIsNormalized = false
+			temperatureSunMultCurve
+			{
+				key = 0 1 0 0
+				key = 3076.923077 0.5 -0.00015 -0.00025661225
+				key = 3390.470769 0 0 0
+				key = 6173.224613 0 0 0
+				key = 14569.01538 0.2 0 0
+				key = 22092.35692 0.2 0 0
+				key = 28089.10768 0 0 0
+				key = 40000 0.4 0 0
 			}
 		}
         PQS
         {
+            minLevel = 2
+            maxLevel = 8
             Mods
 			{
-				VertexHeightOblate
+				VertexHeightMap
 				{
-					height = 30000
-					pow = 10
+					map = KerbolPlus/SarvinSystem/Potatus/PluginData/Potatus_height.png
+					offset = 100
+					deformity = 9000.0
+					scaleDeformityByRadius = false
+					order = 20
+					enabled = true
+				}
+				VertexSimplexHeight
+				{
+					seed = 551946
+					deformity = 3000
+					octaves = 12
+					persistence = 0.5
+					frequency = 4
 					enabled = true
 					order = 100
 				}
-	
-					VertexPlanet
-				{
-					deformity = 15000
-					terrainRidgesMin = 0.1
-					terrainRidgesMax=1
-					ContinentalSimplex
-					{
-						deformity = 2500
-						octaves = 10
-						persistance = 0.4
-						frequency = 1.5
-					}
-					RuggednessSimplex
-					{
-						deformity = 2500
-						octaves = 4
-						persistance = 0.5
-						frequency = 0.5
-					}
-					LandClasses
-					{
-						Class
-						{
-							name = AbyPl
-							baseColor =0.3, 0.2, 0.1, 1.0
-							colorNoise = 0.1, 0.1, 0.1, 1.0
-							colorNoiseAmount = 0.2
-							SimplexNoiseMap
-							{
-								deformity = 1
-								frequency = 4
-								octaves = 4
-								persistance = 0.600000023841858
-								seed = 23133
-							}
-							fractalStart = 0
-							fractalEnd = 0.01
-							fractalDelta = 0.001
-							startHeight = 0
-							endHeight = 0
-							lerpToNext = true
-						}
-						Class
-						{
-							name = Beach
-							baseColor = 0.2, 0.15, 0.1, 1.0
-							colorNoise = 0.05, 0.05, 0.05, 1.0
-							colorNoiseAmount = 0.2
-							SimplexNoiseMap
-							{
-								deformity = 1
-								frequency = 4
-								octaves = 4
-								persistance = 0.600000023841858
-								seed = 23134
-						}
-						fractalStart = 0.01
-						fractalEnd = 0.2
-						fractalDelta = 0.448999988031574
-						startHeight = 0
-						endHeight = 0
-						lerpToNext = true
-					}
-					Class
-					{
-						name = Grass
-						baseColor =0.35, 0.35, 0.35 1.0
-						colorNoise = 0.5, 0.5, 0.425, 1.0
-						colorNoiseAmount = 0.3
-						SimplexNoiseMap
-						{
-							deformity = 1
-							frequency = 3
-							octaves = 4
-							persistance = 0.600000023841858
-							seed = 23135
-						}
-						fractalStart = 0.2
-						fractalEnd = 1.2
-						fractalDelta = 0.449999988079071
-						startHeight = 0
-						endHeight = 0
-						lerpToNext = true
-						}
-						Class
-						{
-							name = Snow
-							baseColor =0.0, 0.0, 0.0, 1.0
-							colorNoise = 0.43, 0.432, 0.339, 1.0
-							colorNoiseAmount = 0.4
-							SimplexNoiseMap
-							{
-								deformity = 1
-								frequency = 2
-								octaves = 4
-								persistance = 0.600000023841858
-								seed = 23136
-							}
-							fractalStart = 1.2
-							fractalEnd = 25
-							fractalDelta = 1.10000002384186
-							startHeight = 0
-							endHeight = 0
-							lerpToNext = false
-						}
-					}
-					seed = 74123
-				}
-
-				
-				
-				
-
+                HeightColorMap
+                {
+                    blend = 1
+                    order = 200
+                    enabled = true
+                    LandClasses
+                    {
+                        Class
+                        {
+                            name = Depths
+                            altitudeStart = 0.0
+                            altitudeEnd = 0.2
+                            color = 0.3,0.6,0.7,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = Base
+                            altitudeStart = 0.2
+                            altitudeEnd = 0.3
+                            color = 0.1,0.1,0.1,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = Mid
+                            altitudeStart = 0.3
+                            altitudeEnd = 0.4
+                            color = 0.1,0.2,0.3,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = High
+                            altitudeStart = 0.4
+                            altitudeEnd = 0.5
+                            color = 0.45,0.5,0.55,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = TopGrad
+                            altitudeStart = 0.5
+                            altitudeEnd = 0.7
+                            color = 0.5,0.5,0.5,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = Peaks
+                            altitudeStart = 0.7
+                            altitudeEnd = 10.0	
+                            color = 0.7,0.75,0.8,1.0
+                            lerpToNext = false
+                        }
+                    }
+                }
 			}
 		}
 	}
