OK that was my bad!

--- a/GameData/KerbolPlus/SarvinSystem/Daphy/Daphy.cfg
+++ b/GameData/KerbolPlus/SarvinSystem/Daphy/Daphy.cfg
@@ -68,7 +68,7 @@
 			{
 				VertexHeightMap
 				{
-					map = KerbolPlus/SarvinSystem/Daphy/PluginData/Daphy_height.png
+					map = KerbolPlus/SarvinSystem/Daphy/PluginData/Daphy_height.dds
 					offset = 100
 					deformity = 6000.0
 					scaleDeformityByRadius = false
