--- a/GameData/KerbolPlus/SarvinSystem/Potatus/Potatus.cfg
+++ b/GameData/KerbolPlus/SarvinSystem/Potatus/Potatus.cfg
@@ -138,7 +138,7 @@
 			{
 				VertexHeightMap
 				{
-					map = KerbolPlus/SarvinSystem/Potatus/PluginData/Potatus_height.png
+					map = KerbolPlus/SarvinSystem/Potatus/PluginData/Potatus_height.dds
 					offset = 100
 					deformity = 9000.0
 					scaleDeformityByRadius = false
